# tauri-plugin-ios-photos

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte  style.css
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/lib/: Greet.svelte
guest-js/: index.ts
ios/: README.md
ios/Sources/: PhotosPlugin.swift
ios/Tests/PluginTests/: Photos.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: check_album_can_operation.toml  create_photos.toml  create_videos.toml  delete_album_medias.toml  get_photos_auth_status.toml  remove_album_medias.toml  request_album_medias.toml  request_albums.toml  request_photos_auth.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs  protocol.rs
