[package]
name = "tauri-plugin-ios-photos"
version = "0.1.0"
authors = ["Gbyte"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-ios-photos"
license = "MIT"
repository = "https://github.com/Gbyte-Group/tauri-plugin-ios-photos"

[dependencies]
tauri = { version = "2.9.5" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
